curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-app
  labels:
    app: curl-app
spec:
  containers:
  - name: main
    image: curlimages/curl
    command: ["sleep","9999999"]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: ambassador
    image: tommyvn/kubectl-proxy
