fortune-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  labels:
    app: fortune
spec:
  containers:
  - name: html-generator
    image: crojasmatas/fortune
    volumeMounts:
      - name: html
        mountPath: /var/htdocs
  - name: web-server
    image: nginx:alpine
    volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
        readOnly: true
    ports:
      - containerPort: 80
        protocol: TCP
  volumes:
    - name: html
      emptyDir: {}
