git-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: git-volume-pod
  labels:
    app: git-volume
spec:
  containers:
  - name: git-volume
    image: nginx:alpine
    volumeMounts:
      - mountPath: /usr/share/nginx/html 
        name: html
    ports:
      - containerPort: 80
  volumes:
    - name: html
      gitRepo:
        repository: https://github.com/carlosrojasmatas/kubia-website-example.git
        revision: master
        directory: .
