kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-gpu
  labels:
    app: kubia  
    creation-method: manual
    env: prod
spec:
  nodeSelector:
    gpu: true
  containers:
  - name: kubia
    image: crojasmatas/kubia:0.1
    ports:
      - containerPort: 8080
        protocol: TCP
