kubia.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia
  labels:
    name: kubia
spec:
  containers:
  - name: kubia
    image: crojasmatas/kubia:0.1
    ports:
      - containerPort: 8080
        protocol: TCP
