ssd-monitor-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kubia-ssd-ds
spec:
  selector:
    matchLabels:
      app: ssd-monitor
  template:
    metadata:
      labels:
        app: ssd-monitor
    spec:
      nodeSelector:
        disk: ssd
      containers: 
        - name: main
          image: crojasmatas/ssd-monitor:0.1
          imagePullPolicy: Always
